# algorithms-project-69

./: Makefile  README.md  pyproject.toml  setup.cfg
search_engine/: search_engine.py
tests/: test_search_engine.py
