[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = "Search Engine"
authors = ["DzmitrySha <ravenbydev@gmail.com>"]
readme = "README.md"
packages = [
    {include = "search_engine"}
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hexlet-python-package = "search_engine.scripts.search_engine:main"
